使用 Colaboratory 建立

--- a/python_20210425_2.ipynb
+++ b/python_20210425_2.ipynb
@@ -6,7 +6,7 @@
       "name": "python_20210425-2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOXM54xOk7j2b29EzofRoF5",
+      "authorship_tag": "ABX9TyPXdRRwkrCe6ZVwV2FuOetc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,20 +44,289 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "QmOnaO0_-z7L",
-        "outputId": "9e8205a6-a946-4bd6-8b6e-738dbda6864e"
+        "id": "p6Fj3n28MDt0",
+        "outputId": "bee4579a-2681-4efb-cd65-bf8a015c185b"
       },
       "source": [
-        "print(\"Happy : %2d, Python : %5.2f\" % (1, 05.333))"
+        "a = 1.0004\n",
+        "int(a)"
       ],
-      "execution_count": 1,
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G725r83AMGiN",
+        "outputId": "5ea0432d-1e89-4f23-9bae-11bf6dd3bfdc"
+      },
+      "source": [
+        "b = 0.9999\n",
+        "int(a)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yN3tRFZ5MXz8",
+        "outputId": "91c62c29-e193-4d28-a72d-00a71a7de5d1"
+      },
+      "source": [
+        "a = dict(one=1, two=2, three=3)\n",
+        "b = {'one': 1, 'two': 2, 'three': 3}\n",
+        "c = dict(zip(['one', 'two', 'three'], [1, 2, 3]))\n",
+        "d = dict([('two', 2), ('one', 1), ('three', 3)])\n",
+        "e = dict({'three': 3, 'one': 1, 'two': 2})\n",
+        "f = dict({'one': 1, 'three': 3}, two=2)\n",
+        "a == b == c == d == e == f"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YR2-12EmMy61",
+        "outputId": "f91a3341-905b-4ed7-c5ce-2ce4d47d1ca7"
+      },
+      "source": [
+        "dict = {'Name': 'DaDaLong', 'Age': 17, 'Class': 'First'}\n",
+        "\n",
+        "print(\"dict['Name']: \", dict['Name'])\n",
+        "print(\"dict['Age']: \", dict['Age'])"
+      ],
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Happy :  1, Python :  5.33\n"
+            "dict['Name']:  DaDaLong\n",
+            "dict['Age']:  17\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N0ycKiP2M4tl",
+        "outputId": "1ea25565-0a6e-4b59-836e-0e4e7a78bfd1"
+      },
+      "source": [
+        "dict = {'Name': 'DaDaLong', 'Age': 17, 'Class': 'First'}\n",
+        "dict.items()"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dict_items([('Name', 'DaDaLong'), ('Age', 17), ('Class', 'First')])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o8vNEIVpM83D",
+        "outputId": "02e03e7c-f632-4614-daba-12f2c97fa957"
+      },
+      "source": [
+        "dict = {'Name': 'DaDaLong', 'Age': 17, 'Class': 'First'}\n",
+        "list(dict.items())\n",
+        "dict = {'Name': 'DaDaLong', 'Age': 17, 'Class': 'First'}\n",
+        "list(dict.keys())"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Name', 'Age', 'Class']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WCIninD6NHNf",
+        "outputId": "edf19713-21cc-4188-bd2d-ae99d4a2bff0"
+      },
+      "source": [
+        "ascii_a2z = {num: chr(num) for num in range(97,123)}\n",
+        "ascii_a2z"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{97: 'a',\n",
+              " 98: 'b',\n",
+              " 99: 'c',\n",
+              " 100: 'd',\n",
+              " 101: 'e',\n",
+              " 102: 'f',\n",
+              " 103: 'g',\n",
+              " 104: 'h',\n",
+              " 105: 'i',\n",
+              " 106: 'j',\n",
+              " 107: 'k',\n",
+              " 108: 'l',\n",
+              " 109: 'm',\n",
+              " 110: 'n',\n",
+              " 111: 'o',\n",
+              " 112: 'p',\n",
+              " 113: 'q',\n",
+              " 114: 'r',\n",
+              " 115: 's',\n",
+              " 116: 't',\n",
+              " 117: 'u',\n",
+              " 118: 'v',\n",
+              " 119: 'w',\n",
+              " 120: 'x',\n",
+              " 121: 'y',\n",
+              " 122: 'z'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ygm_dCrHNM3t",
+        "outputId": "557f4fb1-fb86-49af-b7d4-975384faa20e"
+      },
+      "source": [
+        "alphas= []\n",
+        "for num in range(97,123):\n",
+        "    alpha = chr(num)\n",
+        "    alphas.append(alpha)\n",
+        "  \n",
+        "ascii_a2z = {alpha: ord(alpha) for alpha in alphas}\n",
+        "ascii_a2z"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a': 97,\n",
+              " 'b': 98,\n",
+              " 'c': 99,\n",
+              " 'd': 100,\n",
+              " 'e': 101,\n",
+              " 'f': 102,\n",
+              " 'g': 103,\n",
+              " 'h': 104,\n",
+              " 'i': 105,\n",
+              " 'j': 106,\n",
+              " 'k': 107,\n",
+              " 'l': 108,\n",
+              " 'm': 109,\n",
+              " 'n': 110,\n",
+              " 'o': 111,\n",
+              " 'p': 112,\n",
+              " 'q': 113,\n",
+              " 'r': 114,\n",
+              " 's': 115,\n",
+              " 't': 116,\n",
+              " 'u': 117,\n",
+              " 'v': 118,\n",
+              " 'w': 119,\n",
+              " 'x': 120,\n",
+              " 'y': 121,\n",
+              " 'z': 122}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
         }
       ]
     }
