使用 Colaboratory 建立

--- a/python_20210425_1.ipynb
+++ b/python_20210425_1.ipynb
@@ -6,7 +6,7 @@
       "name": "python_20210425-1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPYUU8ioQFYRZ+KCjvMqt48",
+      "authorship_tag": "ABX9TyOjL62ylLMPjPjmSmMot4v6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -570,7 +570,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 234
+          "height": 238
         },
         "id": "D-E5_X3x8mmZ",
         "outputId": "3d8e53f3-ce1a-4574-d9ac-bf5d8d57d1df"
@@ -657,6 +657,98 @@
         "print(\"Happy : %2d, Python : %5.2f\" % (1, 5.333))"
       ],
       "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Happy :  1, Python :  5.33\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "41hAdAoc_Efu",
+        "outputId": "a1d7d2b2-b40e-4770-9f86-d1a964375259"
+      },
+      "source": [
+        "print(\"%7.3o\" % (25))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "    031\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_Z9HU5K_Lwpc",
+        "outputId": "ad80646a-877e-4f7c-baa8-4598757c9124"
+      },
+      "source": [
+        "print(\"%10.3E\" % (356.08977))"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            " 3.561E+02\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "toIkMZ1iLyen",
+        "outputId": "45ba1388-3ffe-4cc3-a03a-960b32009348"
+      },
+      "source": [
+        "print(\"Total students : %3d, Boys : %2d\" % (240, 120))"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Total students : 240, Boys : 120\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6MLJ6BwwL34U",
+        "outputId": "1b551bd9-9c09-4fcd-c71d-a6271a2d4ca2"
+      },
+      "source": [
+        "print(\"Happy : %2d, Python : %5.2f\" % (1, 05.333))"
+      ],
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
