使用 Colaboratory 建立

--- a/python_20210425_1.ipynb
+++ b/python_20210425_1.ipynb
@@ -6,7 +6,7 @@
       "name": "python_20210425-1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOjL62ylLMPjPjmSmMot4v6",
+      "authorship_tag": "ABX9TyMmwkwNzDubuwG6I9ch4fZo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -754,6 +754,76 @@
           "output_type": "stream",
           "text": [
             "Happy :  1, Python :  5.33\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nhww0LkuOiZt",
+        "outputId": "d7d04f5f-a7ee-4759-e532-a80b034334fb"
+      },
+      "source": [
+        "# using format() method\n",
+        "print('I love {} for \"{}!\"'.format('Python', 'CTFer'))"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "I love Python for \"CTFer!\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0bp3oTWKOuWq",
+        "outputId": "b199f4da-09d3-4c47-c51b-e5860470012d"
+      },
+      "source": [
+        "print('{0} and {1}'.format('Python', 'CTFer'))"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Python and CTFer\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P4NZIeL7Ox4a",
+        "outputId": "54c6b3f0-d839-4744-af88-f20cba99a8b4"
+      },
+      "source": [
+        "print('{1} and {0}'.format('Python', 'CTFer'))"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "CTFer and Python\n"
           ],
           "name": "stdout"
         }
