--- a/python_20210425_2.ipynb
+++ b/python_20210425_2.ipynb
@@ -6,7 +6,7 @@
       "name": "python_20210425-2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPXdRRwkrCe6ZVwV2FuOetc",
+      "authorship_tag": "ABX9TyN6M1WwL1Yz1bS7VNHmNlUp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,168 @@
       "source": [
         "Happy Python Day 2021.4.25\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aIjtzr5AWITq"
+      },
+      "source": [
+        "#基本的運算"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B4D4pgVLVrO5",
+        "outputId": "12fe42d8-0c0a-469e-bc85-143d84fb11d9"
+      },
+      "source": [
+        "a = 17 / 3\n",
+        "b = 17 // 3\n",
+        "c = 17 % 3\n",
+        "\n",
+        "a,b,c"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(5.666666666666667, 5, 2)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KvAuxNAkVvLi",
+        "outputId": "863c825b-5bd7-481e-d8c4-7a60b2c3279f"
+      },
+      "source": [
+        "x = 5\n",
+        "print(x > 3 and x < 10)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aBmaaPtOVwZI",
+        "outputId": "14505f25-6166-4bcf-89d2-782813ace723"
+      },
+      "source": [
+        "x = 5\n",
+        "print(x > 3 or x < 4)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_B2yKUAiV2Up",
+        "outputId": "ed91b568-0619-4993-d691-1d56f2ca646d"
+      },
+      "source": [
+        "x = 5\n",
+        "print(not(x > 3 and x < 10))"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7OmCW7i2WOwz"
+      },
+      "source": [
+        "#內建函式: round()函數的測試\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vWnfErogWBsx",
+        "outputId": "b1b85afe-6f35-473e-fa11-46f773c9285f"
+      },
+      "source": [
+        "#Round a number to only two decimals:\n",
+        "x = round(5.76543, 2)\n",
+        "print(x)\n",
+        "\n",
+        "\n",
+        "# Round to the nearest integer:\n",
+        "y = round(5.76543)\n",
+        "print(y)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5.77\n",
+            "6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a9qO0S1WWXFw"
+      },
+      "source": [
+        "#Python 型態轉換"
       ]
     },
     {
@@ -94,6 +256,192 @@
           },
           "execution_count": 6
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fCfxl7DcWkiZ"
+      },
+      "source": [
+        "#string字串的運算"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ynFYgGMBWmDc",
+        "outputId": "1784373f-ca2e-4e6e-c65d-a686ff2ca60b"
+      },
+      "source": [
+        "r1 = 'Hello Python!'\n",
+        "\n",
+        "print(\"var1[0]: \", var1[0])\n",
+        "print(\"var1[1:8]: \", var1[1:8]) # Slicing 切片運算"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "var1[0]:  H\n",
+            "var1[1:8]:  ello Py\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "11PWDNxNWp5j",
+        "outputId": "a2f48de7-b3c1-45b1-adec-ae1a518c0426"
+      },
+      "source": [
+        "b = \"Hello, World!\"\n",
+        "print(b[2:5])\n",
+        "print(b[:5])\n",
+        "print(b[2:])\n",
+        "print(b[-5:-2]) # Negative Indexing"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "llo\n",
+            "Hello\n",
+            "llo, World!\n",
+            "orl\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UWMc_zhcWwhM"
+      },
+      "source": [
+        "#Python内建的字串函数"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UayJLP_nWyXR",
+        "outputId": "dafdf3e6-76b2-41c7-a762-f9d9de23be97"
+      },
+      "source": [
+        "str1='happy python day'\n",
+        "str2='    Oh!   '\n",
+        "\n",
+        "str3=str1 + str2   # 字串串接String Concatenation運算\n",
+        "\n",
+        "print(str4.capitalize())"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Happy python day    oh!   \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Nf6pdR__W_Ux"
+      },
+      "source": [
+        "#列表(list)資料及其運算"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TtFv0HMXXApK",
+        "outputId": "613fd239-f872-4b91-8302-d0184291f8a4"
+      },
+      "source": [
+        "list1 = [21, 33, 14, 12, 32, 98]\n",
+        "\n",
+        "list1[1]\n",
+        "list1[-2]\n",
+        "list1[1:3]"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[33, 14]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jiiT5Aw7XI0h",
+        "outputId": "29e9c269-d67d-47e0-dfdc-7eeda8dfb040"
+      },
+      "source": [
+        "list1 = [21, 33, 14, 12, 32, 98]\n",
+        "\n",
+        "len(list1)\n",
+        "max(list1)\n",
+        "min(list1)\n",
+        "sum(list1)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "210"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zNKwN262XOTT"
+      },
+      "source": [
+        "#字典(dict)資料及其運算"
       ]
     },
     {
