--- a/python_20210425_1.ipynb
+++ b/python_20210425_1.ipynb
@@ -6,7 +6,8 @@
       "name": "python_20210425-1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMmwkwNzDubuwG6I9ch4fZo",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPlW3YsgczxnDWTjBHPiKRV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +37,15 @@
       "source": [
         "Happy Python Day 2021.4.25\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L2yJHfjeXgmj"
+      },
+      "source": [
+        "#基礎輸入與輸出"
       ]
     },
     {
@@ -75,43 +85,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Ztz6fBlOzqya",
-        "outputId": "aa8f5202-b515-4a53-9ccd-3478fa2514ad"
+        "id": "icSYQidYXwEw",
+        "outputId": "0d8c2291-19b2-4e9a-dc8a-08d9b1a76744"
       },
       "source": [
-        "import pandas as pd\n",
-        "print(\"pandas version: %s\" % pd.__version__)\n",
-        " \n",
-        "import matplotlib\n",
-        "print(\"matplotlib version: %s\" % matplotlib.__version__)\n",
-        " \n",
-        "import numpy as np\n",
-        "print(\"numpy version: %s\" % np.__version__)\n",
-        " \n",
-        "import sklearn\n",
-        "print(\"scikit-learn version: %s\" % sklearn.__version__)\n",
-        " \n",
-        "import tensorflow as tf\n",
-        "print(\"tensorflow version: %s\" % tf.__version__)\n",
-        " \n",
-        "import torch\n",
-        "print(\"PyTorch version: %s\" %torch.__version__)\n",
-        "print(\"2021年4月PyTorch version最新版本 請參閱https://pytorch.org/\")"
+        "a,b = eval(input(\"請輸入兩個數位：\"))\n",
+        "a,b"
       ],
-      "execution_count": 2,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "pandas version: 1.1.5\n",
-            "matplotlib version: 3.2.2\n",
-            "numpy version: 1.19.5\n",
-            "scikit-learn version: 0.22.2.post1\n",
-            "tensorflow version: 2.4.1\n",
-            "PyTorch version: 1.8.1+cu101\n",
-            "2021年4月PyTorch version最新版本 請參閱https://pytorch.org/\n"
+            "請輸入兩個數位：1,1\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 1)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 24
         }
       ]
     },
@@ -642,6 +642,15 @@
           },
           "execution_count": 7
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "spwBYE3aYagU"
+      },
+      "source": [
+        "#格式化輸出\n"
       ]
     },
     {
