使用 Colaboratory 建立

--- a/python_20210425_3.ipynb
+++ b/python_20210425_3.ipynb
@@ -6,7 +6,7 @@
       "name": "python_20210425-3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN4Q7KnL8SK9HgwQiU09j0D",
+      "authorship_tag": "ABX9TyNtxcRDuZNpO6yXrCuSLtOI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4_P1jpdeUVCi",
-        "outputId": "eb5983cf-7e90-45e2-c065-7c79f13d764b"
+        "outputId": "4552562e-9582-496a-9368-537eba49d2ae"
       },
       "source": [
         "a = 33\n",
@@ -63,7 +63,7 @@
         "if b > a:\n",
         "  print(\"b is greater than a\")"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,11 +86,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "o6OEH5OWU07K",
-        "outputId": "d97e30bb-7dd4-4d66-e000-3322ce70213c"
+        "id": "o6OEH5OWU07K"
       },
       "source": [
         "a = 32\n",
@@ -101,16 +97,8 @@
         "elif a == b:\n",
         "  print(\"a and b are equal\")"
       ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "b is greater than a\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -129,7 +117,7 @@
         "elif a == b:\n",
         "  print(\"a and b are equal\")"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +155,7 @@
         "else:\n",
         "  print(\"b is not greater than a\")"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,7 +195,7 @@
         "else:\n",
         "  print(\"a is greater than b\")"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +243,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HbnuzB5wZC-w"
+        "id": "HbnuzB5wZC-w",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eeee6cb8-1961-4108-9c37-54b075390fad"
       },
       "source": [
         "year, month, day = eval(input(\"請輸入年月日\"))\n",
@@ -270,6 +262,47 @@
         "    print(day)\n",
         "else:\n",
         "    print(sum(day_month[:month-1])+day)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入年月日2005,6,25\n",
+            "176\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IjXGtViJZiEi"
+      },
+      "source": [
+        "#多向判斷式（if⋯elif⋯else）"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TxeHfBe3Zj3Q"
+      },
+      "source": [
+        "money = int(input(\"請輸入購物金額：\"))\n",
+        "\n",
+        "if(money >= 10000):\n",
+        "    if(money >= 100000):\n",
+        "        print(money * 0.8, end=\" 元\\n\")  #八折\n",
+        "    elif(money >= 50000):\n",
+        "        print(money * 0.85, end=\" 元\\n\")  #八五折\n",
+        "    elif(money >= 30000):\n",
+        "        print(money * 0.9, end=\" 元\\n\")  #九折\n",
+        "    else:\n",
+        "        print(money * 0.95, end=\" 元\\n\")  #九五折\n",
+        "else:\n",
+        "    print(money, end=\" 元\\n\")  #未打折"
       ],
       "execution_count": null,
       "outputs": []
