使用 Colaboratory 建立

--- a/python_20210425_1.ipynb
+++ b/python_20210425_1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPlW3YsgczxnDWTjBHPiKRV",
+      "authorship_tag": "ABX9TyOmLe3mN5yM7gGRsV+FW96G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "id": "yvFF-HTjuw1W"
       },
       "source": [
-        "Happy Python Day 2021.4.25\n",
+        "# Happy Python Day 2021.4.25\n",
         "\n"
       ]
     },
