使用 Colaboratory 建立

--- a/python_20210425_4.ipynb
+++ b/python_20210425_4.ipynb
@@ -6,7 +6,7 @@
       "name": "python_20210425-4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO9RhT30su0QDSKY1hdhek5",
+      "authorship_tag": "ABX9TyOXOh3V4hd0zclnztUl/GpW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,6 +128,214 @@
         "#for 廻圈\n",
         "使用for 廻圈 執行固定次數的廻圈運算(通常)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "62EkAanWboOx"
+      },
+      "source": [
+        "for n in range(5):\n",
+        "  print(n)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BdMJgnJEbpp3"
+      },
+      "source": [
+        "for n in range(10):\n",
+        "    print(n, end='@')\n",
+        "\n",
+        "    #print(n, end='%%%%')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AhFsinRlbxWX"
+      },
+      "source": [
+        "#底下兩個程式輸出為何? and why?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sSUruAxxbypk"
+      },
+      "source": [
+        "mysum = 0\n",
+        "\n",
+        "for n in range(5):\n",
+        "  mysum += n\n",
+        "  print(mysum)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HbBhi7Dkb1AP"
+      },
+      "source": [
+        "mysum = 0\n",
+        "\n",
+        "for n in range(5):\n",
+        "  mysum += n\n",
+        "\n",
+        "print(mysum)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NhxvHnreb4iX"
+      },
+      "source": [
+        "#計算1+2+3+ .....+ n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uHZfSVyDb5kX",
+        "outputId": "2bbf6360-4501-4dd7-a077-0ba8cc7dbd0a"
+      },
+      "source": [
+        "x = int(input(\"請輸入一個正整數:\"))\n",
+        "\n",
+        "mysum = 0\n",
+        "\n",
+        "for n in range(x+1): ## 為什麼不是range(x)?\n",
+        "  mysum += n\n",
+        "\n",
+        "print(mysum)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "請輸入一個正整數:5\n",
+            "15\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s19bwocBb_Jf"
+      },
+      "source": [
+        "#執行下列程式並說明其結果\n",
+        "底下程式如果第五行改成  if (number % 2 = 0):答案會是甚麼??"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LcOgowPicEBf"
+      },
+      "source": [
+        "numbers = [21, 4, 35, 1, 8, 7, 3, 6, 9]\n",
+        "my_numbers = []\n",
+        "\n",
+        "for number in numbers:\n",
+        "  if (number % 2 != 0): \n",
+        "    my_numbers.append(number)\n",
+        "\n",
+        "print(my_numbers)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "seGu8hiMcLXf"
+      },
+      "source": [
+        "#While Loop\n",
+        "使用 while loop設計 \n",
+        "n階程的計算:n!=1*2*3*⋯*n\n",
+        "\n",
+        "1!　=　１\n",
+        "2!　=　1*2　=　2\n",
+        "3!　=　1*2*3　=　6\n",
+        "輸入::一個正整數 n\n",
+        "輸出::n!\n",
+        "\n",
+        "當使用者輸入一個正整數 n 後，程式就會顯示\n",
+        "1*2*3*...*n 的乘積"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OpV9QdH1cMZo"
+      },
+      "source": [
+        "total = i = 1\n",
+        "\n",
+        "n = int(input(\"請輸入正整數 n 的值：\")) # 再問一次:為什麼要加\n",
+        "\n",
+        "while(i<=n):\n",
+        "    total *= i  \n",
+        "    i+=1      \n",
+        "\n",
+        "print(\"%d!=%d\" % (n, total))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I0yPs52NcVrG"
+      },
+      "source": [
+        "#break 指令\n",
+        "可在廻圈執行中途強迫跳離廻圈，跳到廻圈後面的程式繼續執行。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AYviCJdRcaMp"
+      },
+      "source": [
+        "fruits = [\"香蕉\",\"蘋果\",\"橘子\",\"鳳梨\",\"西瓜\"]\n",
+        "\n",
+        "while True:\n",
+        "    fruit = input(\"請輸入喜歡的水果(Enter 結束)：\")\n",
+        "\n",
+        "  # 要執行程式請記得把底下兩行 # 去除 \n",
+        "  #  if (fruit==\"\"):\n",
+        "  #      break\n",
+        "\n",
+        "    n = fruits.count(fruit) \n",
+        "    if (n>0):  # 串列元素存在\n",
+        "        p=fruits.index(fruit)\n",
+        "        print(\"%s 在串列中的第 %d 項\" %(fruit,p+1))\n",
+        "    else:\n",
+        "        print(fruit,\"不在串列中!\")"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
