使用 Colaboratory 建立

--- a/python_20210425_4.ipynb
+++ b/python_20210425_4.ipynb
@@ -6,7 +6,7 @@
       "name": "python_20210425-4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOXOh3V4hd0zclnztUl/GpW",
+      "authorship_tag": "ABX9TyM21THIFO3N1bU+Avkxgv0n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -207,11 +207,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uHZfSVyDb5kX",
-        "outputId": "2bbf6360-4501-4dd7-a077-0ba8cc7dbd0a"
+        "id": "uHZfSVyDb5kX"
       },
       "source": [
         "x = int(input(\"請輸入一個正整數:\"))\n",
@@ -223,17 +219,8 @@
         "\n",
         "print(mysum)"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "請輸入一個正整數:5\n",
-            "15\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -333,6 +320,66 @@
         "        print(\"%s 在串列中的第 %d 項\" %(fruit,p+1))\n",
         "    else:\n",
         "        print(fruit,\"不在串列中!\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "05Qb3q9fcyov"
+      },
+      "source": [
+        "#continue 指令\n",
+        "在廻圈執行中途暫時停住不往下執行，而跳到廻圈的起始處繼續執行\n",
+        "撰寫一個可以排除數列中 5 的倍數的程式\n",
+        "\n",
+        "輸入::一個正整數 n\n",
+        "輸出::\n",
+        "使用者只要輸入一個正整數，\n",
+        "程式會顯示由 1 到該整數的整數數列，但會將 5 的倍數排除"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WUyxGKJmczxf"
+      },
+      "source": [
+        "n = int(input(\"請輸入正整數：\"))\n",
+        "\n",
+        "for i in range(1, n+1):\n",
+        "    if i % 5 ==0:\n",
+        "        continue\n",
+        "    print(i,end=\" \")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LmnxHcyfc9hD"
+      },
+      "source": [
+        "#巢狀廻圈Nested Loop\n",
+        "廻圈中又包含廻圈 ==> 巢狀廻圈(Nested Loop)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9r159SGsc_kJ"
+      },
+      "source": [
+        "#!/usr/bin/python\n",
+        "# -*- coding: UTF-8 -*-\n",
+        " \n",
+        "for i in range(1,6):\n",
+        "    for j in range(1,5):\n",
+        "        for k in range(1,7):\n",
+        "            if( i != k ) and (i != j) and (j != k):\n",
+        "                print(i,j,k)"
       ],
       "execution_count": null,
       "outputs": []
