使用 Colaboratory 建立

--- a/python_20210425_5.ipynb
+++ b/python_20210425_5.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMvIrHuDLs2Bny7Bt4ZzMTb",
+      "authorship_tag": "ABX9TyMoldP9xZFx+gQ7Dnv1jrGG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -280,6 +280,103 @@
         "print_params(1, 2, 3) \n",
         "\n",
         "# return的是tuple資料型態"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TWXOYohuiqcQ"
+      },
+      "source": [
+        "可和一般參數一齊用"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gaoFXtLBirSq"
+      },
+      "source": [
+        "def print_params_2(title, *params): \n",
+        "    print(title) \n",
+        "    print(params)\n",
+        "\n",
+        "print_params_2('Params:', 1, 2, 3)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gg267ZWditpl"
+      },
+      "source": [
+        "撰寫擁有任意數量參數的函式 且要支援 關鍵字參數==>使用**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OnBMhgumivdt"
+      },
+      "source": [
+        "def print_params_3(**params): \n",
+        "    print(params) \n",
+        "\n",
+        "print_params_3(x=1, y=2, z=3) \n",
+        "\n",
+        "# return的是dict(字典資料型態)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Jws2AlPoiyTf"
+      },
+      "source": [
+        "綜合練習 ==> 先不跑程式, 你能說出底下會列印出甚麼嗎?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SPpgtOjli0e1"
+      },
+      "source": [
+        "def print_params_4(x, y, z=3, *pospar, **keypar): \n",
+        "    print(x, y, z) \n",
+        "    print(pospar) \n",
+        "    print(keypar) \n",
+        "\n",
+        "print_params_4(1, 2, 4, 5, 6, 7, foo=1, bar=2)\n",
+        "\n",
+        "print_params_4(1, 2)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TgaRD9efi2y9"
+      },
+      "source": [
+        "#[特別注意]要將字典dict型的資料傳給函數時,記得要使用**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yK2z-l8Mi58d"
+      },
+      "source": [
+        "params = {'name': 'Sir Simon Rattle', 'greeting': 'To my Great Conductor'}\n",
+        "hello_3(**params)"
       ],
       "execution_count": null,
       "outputs": []
