使用 Colaboratory 建立

--- a/python_20210425_5.ipynb
+++ b/python_20210425_5.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMoldP9xZFx+gQ7Dnv1jrGG",
+      "authorship_tag": "ABX9TyN7Mi3FonVDCAzruy4uf3Ed",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -380,6 +380,348 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "p_FNblg2jA-v"
+      },
+      "source": [
+        "#變數的有效範圍\n",
+        "變數的有效範圍(Scope)：變數在程式可參考的範圍。\n",
+        "\n",
+        "區域變數(local variable):宣告在函式內部的變數\n",
+        "\n",
+        "全域變數(global variables):宣告在所有函式外部的變數"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ioYcyAYYjCJ2"
+      },
+      "source": [
+        "x = 111\n",
+        "\n",
+        "def f1():\n",
+        "    x = 222\n",
+        "    print(x) \n",
+        "\n",
+        "f1()\n",
+        "print(x)\n",
+        "\n",
+        "x = 1\n",
+        "\n",
+        "def increase():\n",
+        "    global x\n",
+        "    x =  x + 1\n",
+        "    print(x) \n",
+        "\n",
+        "increase()\n",
+        "print(x)\n",
+        "increase()\n",
+        "increase()\n",
+        "print(x)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GM42KwYTjEl-"
+      },
+      "source": [
+        "#各種函數技術"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gm2joAoWjHfu"
+      },
+      "source": [
+        "#匿名函數==>lambda 運算式\n",
+        "匿名函數==沒有函數名稱、臨時使用的小函數\n",
+        "使用lambda 運算式來宣告匿名函數\n",
+        "lambda 運算式只能包含一個運算式， 不允許複雜的語句，但運算式中可呼叫其他函數"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WcO2w7LpjKBe"
+      },
+      "source": [
+        "把lambda運算式當做函數"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "llqEdc-SjL1G"
+      },
+      "source": [
+        "f1 = lambda x, y, z: x+2*y+3*z\n",
+        "print(f1(2,3,1))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wimdluMwjdp3"
+      },
+      "source": [
+        "#在lambda 運算式中呼叫其他函式(重要技術)\n",
+        "把list的每筆資料取平方"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p4h7_YH9nZ-h"
+      },
+      "source": [
+        "def myfunc(m):\n",
+        "    return m*m\n",
+        "\n",
+        "my_list = [1, 3, 5, 7, 9]\n",
+        "\n",
+        "## 使用python的map()\n",
+        "\n",
+        "map(lambda x:myfunc(x), my_list)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eEEQ61t8ncFu"
+      },
+      "source": [
+        "#遞迴函式 ==> recursive vs iterative(loop)\n",
+        "遞迴 (Recursion)函式:在函式中會呼叫自己函式\n",
+        "\n",
+        "遞迴 (Recursion)與分治法(分而治之 Divide-and-conquer)\n",
+        "\n",
+        "分治法(分而治之)是重要的演算法典範 \n",
+        " 把一個複雜的問題分成兩個或更多的相同或相似的子問題，直到最後子問題可以簡單的直接求解，\n",
+        " 原問題的解即子問題的解的合併\n",
+        " recursion is a method of solving a problem \n",
+        " where the solution depends on solutions to smaller instances of the same problem\n",
+        " \n",
+        "https://en.wikipedia.org/wiki/Divide-and-conquer_algorithm\n",
+        "大部分程式語言(Pyhon| C| C++|C#|JAVA )都會教 遞迴函式,底下是常用來當作業\n",
+        "程式開發作業:費氏數列\n",
+        "程式開發作業::1+2+3+....+n\n",
+        "程式開發作業:n!\n",
+        "程式開發作業:x的n次方\n",
+        "程式開發作業:二項係數\n",
+        "程式開發作業 Ackermann函式:\n",
+        "     (https://en.wikipedia.org/wiki/Ackermann_function)\n",
+        "\n",
+        "資料結構與演算法 ==> 例舉數例\n",
+        "程式開發作業:河內塔\n",
+        "程式開發作業:八皇后問題\n",
+        "程式開發作業:binary search二元搜尋法\n",
+        "\n",
+        "\n",
+        "函式開發 使用recursive 遞迴技術\n",
+        "函式開發 使用iterative(loop) 技術\n",
+        "\n",
+        "大學課程 ==> 還要教時間複雜度的計算\n",
+        "   recursive vs iterative(loop) 哪一個效能比較好 ?? 大學 再學"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tOIXIZbdn6X6"
+      },
+      "source": [
+        "#範例:費氏數列\n",
+        "費氏數列Fibonacci sequence又稱 黃金分割數列\n",
+        "0、1、1、2、3、5、8、13、21、34、……。\n",
+        "\n",
+        "在數學上，費波那契數列是以遞迴的方法來定義：\n",
+        "F(0) = 0    (n=0)\n",
+        "F(1) = 1    (n=1)\n",
+        "F(n) = F(n-1)+ F(n-2)(n=>2)\n",
+        "\n",
+        "註:費氏數列有許多變化與定義,仔細區別之"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fgBAdr81n7k0"
+      },
+      "source": [
+        "方法一:使用 recursive"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mDRnV8bvn-cY"
+      },
+      "source": [
+        "#!/usr/bin/python\n",
+        "# -*- coding: UTF-8 -*-\n",
+        "\n",
+        "def fib(n):\n",
+        "    if n==1 or n==2:\n",
+        "        return 1\n",
+        "    return fib(n-1)+fib(n-2)\n",
+        "\n",
+        "print(fib(10))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hpCcwPMgoBwM"
+      },
+      "source": [
+        "方法二:使用 iterative"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y2nKfx7toDt8"
+      },
+      "source": [
+        "#!/usr/bin/python\n",
+        "# -*- coding: UTF-8 -*-\n",
+        " \n",
+        "def fib(n):\n",
+        "    a,b = 1,1\n",
+        "    for i in range(n-1):\n",
+        "        a,b = b,a+b\n",
+        "    return a\n",
+        " \n",
+        "\n",
+        "print(fib(10))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vqginZVvoFm_"
+      },
+      "source": [
+        "#【Python 練習實例28】\n",
+        "有5個人坐在一起，\n",
+        "問第五個人多少歲？他說比第4個人大2歲。\n",
+        "問第4個人歲數，他說比第3個人大2歲。\n",
+        "問第三個人，又說比第2人大兩歲。\n",
+        "問第2個人，說比第一個人大兩歲。\n",
+        "最後問第一個人，他說是10歲。\n",
+        "請問第五個人多大？"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r0SvwaeOoIxM"
+      },
+      "source": [
+        "#問題:要如何知道函數被呼叫的次數??\n",
+        "遞迴函式的呼叫次數 ==> 全域變數的應用\n",
+        "還有其他方法嗎?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ybrpjwu1oLOm"
+      },
+      "source": [
+        "#!/usr/bin/python\n",
+        "# -*- coding: UTF-8 -*-\n",
+        "\n",
+        "def fib(x):\t\n",
+        "\tglobal numFibCalls\n",
+        "\tnumFibCalls += 1\n",
+        "\t\n",
+        "\tif x == 0 or x == 1:\n",
+        "           return 1\n",
+        "\telse:\n",
+        "          return fib(x-1) + fib(x-2)\n",
+        "\n",
+        "def testFib(n):\n",
+        "\tfor i in range(n+1):\n",
+        "          global numFibCalls\n",
+        "          numFibCalls = 0\n",
+        "          print('fib of', i, '=', fib(i))\n",
+        "          print('fib called', numFibCalls, 'times.')\n",
+        "\n",
+        "testFib(4)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LOUJ-sMqoNv0"
+      },
+      "source": [
+        "#Python內建函數==>Built-in Functions:\n",
+        "Python有許多內建函數\n",
+        "請講師帶學生看看底下官方的文件\n",
+        "https://docs.python.org/3.8/library/functions.html\n",
+        "\n",
+        "使用範例 ==> 請參考 https://www.programiz.com/python-programming/methods/built-in\n",
+        "             看不懂的部分..以後再學  \n",
+        "\n",
+        "底下範例說明hex(x),oct(x),bin(x)內建函數的使用"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1Rajpr6doQ0W"
+      },
+      "source": [
+        "#數目系統(number system)之n進位制(十進位,二進位,)與轉換(十進位 轉 二進位,...等)\n",
+        "數目系統(number system)之n進位制說明 \n",
+        " ==> 請參閱 https://zh.wikipedia.org/wiki/進位制\n",
+        "直接在Google Colab輸入後 再執行  即可看到答案\n",
+        "\n",
+        "十進位數字 轉 十六進位 ==> hex(255) hex(-42)\n",
+        "十進位數字 轉 八進位 ==> oct(8)\n",
+        "十進位數字 轉 二進位 ==> bin(3)\n",
+        "\n",
+        "二進位 轉 十進位數字 ==> 0b10 \n",
+        "八進位 轉 十進位數字 ==> 0o10   0o10101110\n",
+        "十六進位 轉 十進位數字 ==>0x10"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "5dvpETVMoWvs"
+      },
+      "source": [
+        "#作業\n",
+        "舉例說明底下內建函數(Built-in Functions)的用法:\n",
+        "1 divmod(a, b) \n",
+        "  ==> divmod(3, 5)與divmod(5,3)會輸出甚麼答案?答案是什麼資料型態?\n",
+        "\n",
+        "2 pow(base, exp  , mod) \n",
+        "   ==> pow(2,3)與pow(2,3,5)分別會輸出甚麼答案?\n",
+        "   \n",
+        "3 chr(i) 與 ord(c)  ==> ACII 編碼與解碼 "
+      ]
     }
   ]
 }
